# CLightRemote

./: CMakeLists.txt  Getsensor.cpp  Getsensor.h  main.cpp  mainwindow.cpp  mainwindow.h  ui_mainwindow.h
